25.mar (ws)
      - fix #9916: ties don't copy
      - do not show nonexistant files in "open recent"
      - fix #9919: error on open/read musicxml was not handled
24.mar (ws)
      - add previous/next button to measure properties dialog
      - draw grips in edit mode always on top of all other elements
      - fix initialization of split-window action
23.mar (ws)
      - new commands: "split measure" and "join measure"
22.mar (ws)
      - new display option: "show unprintable" allows to hide spacer and layout-breaks
      - avoid recursive call of instrument dialog when pressing "i" again when
        dialog is active
      - instrument dialog: allow staff to move to previous or next part with up/down
       (la)
      - add export to MP3 option via lame_enc "a la Audacity"
      - better handling of missing soundfont
20.mar (ws)
      - first implementation of "profiles"; palette changes are recorded in current
        profile; "default" profile is read only
      - allow creation of new text styles
19.mar (la)
      - fix #9830: Percussion sounds not exported correctly in MusicXML
17.mar (ws)
      - enhanced clef layout
16.mar (ws)
      - slur edit mode: dragging the first or last grip on a note
        moves the anchor to this chord. This allows to connect notes in different
        voices or staves. Its also possible to anchor the start and end of
        a slur to one note.
      - fix #9608: even lyrics style is not applied
14.mar (ws)
      - allow ties between notes with different voice (and same pitch)
      - fix crash when inserting vertical frame (#9765)
      - add preference value for audio export sample rate
      - fix audio export
13.mar (ws)
      - #9731: fix backward compatibility for latest changes in clef handling
11.mar (ws)
      - more articulations: pralldown, prallup, lineprall
      - palette customization: resize palette after adding/removing elements
      - set invisible now works for all selected elements